--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,11 +25,11 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'home:main' %}">Home</a>
-                <a class="navbar-brand" href="{% url 'profesor:profesor-list' %}">Profesores</a>
-                <a class="navbar-brand" href="{% url 'course:course-list' %}">Cursos</a>
-                <a class="navbar-brand" href="{% url 'student:student-list' %}">Estudiantes</a>
+                
+                <a class="navbar-brand" href="{% url 'seeds:seeds-list' %}">Cursos</a>
+                
                 {% if user.is_authenticated %}
-                <a class="navbar-brand" href="{% url 'homework:homework-list' %}">Entregables</a>
+                <a class="navbar-brand" href="{% url 'homework:homework-list' %}">Contacto</a>
                 <a class="btn btn-secondary" href="{% url 'user:user-update' %}">Editar usuario</a>
                 <a class="btn btn-primary" href="{% url 'user:user-logout' %}">Cerrar Sesión</a>
                 {% else %}
@@ -44,7 +44,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Este es nuestro Playground Avanzado <br> Django-CoderHouse</h1>
+                            <h1 class="mb-8">Karazhan<br> Growshop</h1>
                             {% if messages %}
                                 {% for message in messages %}
                                 <h4><p style="color: rgb(131, 31, 0)" {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p></h4>
