--- a/seeds/templates/seeds/seeds_form.html
+++ b/seeds/templates/seeds/seeds_form.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% block coderhouse_project_content %}
 
-<h2>Formulario para guardar/editar estudiente</h2>
+<h2>Formulario para guardar/editar seeds</h2>
 <hr></hr>
 
 <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" class="btn btn-primary" value="Guardar estudiente" />
+    <input type="submit" class="btn btn-primary" value="Guardar seeds" />
 </form>
 
 {% endblock %}
