--- a/seeds/templates/seeds/seeds_list.html
+++ b/seeds/templates/seeds/seeds_list.html
@@ -2,26 +2,26 @@
 {% load static %}
 {% block coderhouse_project_content %}
 
-<h2>Lista de Estudiantes</h2>
+<h2>Seeds</h2>
 {% if user.is_authenticated %}
-<a class="card_custom" href="{% url 'student:student-add' %}">Crear nuevo Estudiante</a>
+<a class="card_custom" href="{% url 'seeds:seeds-add' %}">Crear Seeds</a>
 {% endif %}
 <hr></hr>
 <ul>
-    {% for student in student_list %}
+    {% for seeds in seeds_list %}
     <li>
-        {{student}}
+        {{seeds}}
         (
-            <a href="{% url 'student:student-detail' student.id %}">
+            <a href="{% url 'seeds:seeds-detail' seeds.id %}">
                 <i class="fa fa-eye" style="color: rgb(0, 0, 255);"> </i>
             </a>
         {% if user.is_authenticated %}
         |
-        <a href="{% url 'student:student-update' student.id %}">
+        <a href="{% url 'seeds:seeds-update' seeds.id %}">
             <i class="fa fa-pencil" style="color: rgb(0, 0, 190);"> </i>
         </a>
         |
-        <a href="{% url 'student:student-delete' student.id %}">
+        <a href="{% url 'seeds:seeds-delete' seeds.id %}">
             <i class="fa fa-trash" style="color: rgb(0, 0, 100);"> </i>
         </a>
         {% endif %}
