--- a/seeds/templates/seeds/seeds_detail.html
+++ b/seeds/templates/seeds/seeds_detail.html
@@ -7,6 +7,6 @@
 <p><h3>{{ seeds.name }}</h3></p>
 <p><h4>{{ seeds.price }}</h4></p>
 <h4>Descripción:</h4>
-<p><textarea readonly rows="7" cols="90" >{{ seeds.description }}</textarea></p>
+<p><textarea readonly rows="14" cols="100" >{{ seeds.description }}</textarea></p>{% load static %}<img src="{% static 'seeds/budha.jpg' %}" alt="My image">
 <p><a class="btn2 btn-primary" href="{% url 'seeds:seeds-list' %}">Regresar a la lista de seeds</a></p>
 {% endblock %}
