nuevos cambios, dandole color

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,8 +30,13 @@
                 
                 {% if user.is_authenticated %}
                 <a class="navbar-brand" href="{% url 'home:contacto' %}">Contacto</a>
-                <a class="btn btn-secondary" href="{% url 'user:user-update' %}">Editar usuario</a>
-                <a class="btn btn-primary" href="{% url 'user:user-logout' %}">Cerrar Sesión</a>
+                <a class="btn-neon" href="#">  </a>
+                <img height="60px" src="{{url}}" alt="">
+                <a class="btn btn-primary" href="{% url 'user:user-update' %}">{{ user.username }}</a>
+                <a class="btn btn-secondary" href="{% url 'user:user-logout' %}">Cerrar Sesión</a>
+               
+                    
+                    
                 {% else %}
                 <a class="btn btn-primary" href="{% url 'user:user-login' %}">Iniciar Sesión</a>
                 {% endif %}
@@ -44,14 +49,12 @@
                     <div class="col-xl-6">
                         <div class="text-center text-green">
                             <!-- Page heading-->
-                            <h1 class="mb-8">Karazhan<br> Growshop</h1> 
-                            {% if user.is_authenticated %}
-                            <div class="text-left text-white">
-                            <h5>Bienvenido {{ user.username }}</h5>
-                            <h8><a style="color: rgb(3, 36, 184)" href="{% url 'user:avatar-load' %}">Cambiar Avatar</a></h8> 
-                            <img height="80px" src="{{url}}" alt="">
-                            </div> 
-                            {% endif %} 
+                            <h1 class="mb-9">Karazhan<br> Growshop</h1> 
+                            
+                            
+                            
+                            
+                           
                                                                      
                             {% if messages %}
                                 {% for message in messages %}
@@ -96,13 +99,13 @@
                     <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
+                                <a href="https://www.facebook.com/"><i class="bi-facebook fs-3"></i></a>
                             </li>
                             <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
+                                <a href="https://www.twitter.com/"><i class="bi-twitter fs-3"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
+                                <a href="https://www.instagram.com/"><i class="bi-instagram fs-3"></i></a>
                             </li>
                         </ul>
                     </div>
