--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -3,9 +3,12 @@
 {% block coderhouse_project_content %}
 
 
+
+
 <h2>Buscador</h2>
 <hr>
 </hr>
+<div class="text-left text-white">
 
 <form action="/search" method="GET">
     <div>
