--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -32,7 +32,7 @@
                 <a class="navbar-brand" href="{% url 'home:contacto' %}">Contacto</a>
                 <a class="btn-neon" href="#">  </a>
                 <img height="60px" src="{{url}}" alt="">
-                <a class="btn btn-primary" href="{% url 'user:user-update' %}">{{ user.username }}</a>
+                <a class="btn btn-primary" href="{% url 'user:profile' %}">{{ user.username }}</a>
                 <a class="btn btn-secondary" href="{% url 'user:user-logout' %}">Cerrar Sesión</a>
                
                     
