--- a/home/static/home/css/styles.css
+++ b/home/static/home/css/styles.css
@@ -84,8 +84,8 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: white;
-  background-image: url (django-coderhouse-project/home/static/home/assets/img/weedbackground.jpg);
+  background-color: #fff;
+  background-image: url ("../assets/img/weedbackground.jpg");
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
