--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,8 @@
         <!-- Awesome fonts -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <body>
+    <body background-image="{% static 'home/assets/img/weedbackground.jpg' %}">
+        
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
