--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -2,8 +2,15 @@
 {% load static %}
 {% block coderhouse_project_content %}
 
-<img height="60px" src="{{url}}" alt="">
-<a class="btn btn-primary" href="{% url 'user:avatar-load' %}">Cambiar avatar</a>
-<a class="btn btn-primary" href="{% url 'user:user-update' %}">Editar perfil</a>
+<h1><p style="color: black;">{{ user.username }}</p><br></h1>
+    
+<h3><p style="color: white;">Nombre: {{ user.first_name }}<br>Apellido: {{ user.last_name }}<br>Email: {{ user.email }}</p></h3>
+                
+
+<div class="container">
+    <img height="300px" src="{{url}}" alt="">
+    <a class="btn btn-primary" href="{% url 'user:avatar-load' %}">Cambiar avatar</a>
+    <a class="btn btn-primary" href="{% url 'user:user-update' %}">Editar perfil</a>
+</div>
 
 {% endblock %}
