--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
                         <ul class="list-inline mb-2">
-                            <li class="list-inline-item"><a href="#!">About</a></li>
+                            <li class="list-inline-item"><a href="{% url 'home:about' %}">About</a></li>
                             <li class="list-inline-item">⋅</li>
                             <li class="list-inline-item"><a href="{% url 'home:contacto' %}">Contact</a></li>
                             <li class="list-inline-item">⋅</li>
