--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -2,9 +2,8 @@
 {% load static %}
 {% block coderhouse_project_content %}
 
-<h3>La Huerta Grow, auténticos especialistas y amantes del cannabis
-
-    La Huerta Grow Shop es una tienda física y online especializada en cannabis, con sede en L’Hospitalet de Llobregat, Barcelona.
+<h3>
+    Karazhan grow shop es una tienda física y online especializada en cannabis, con sede en L’Hospitalet de Llobregat, Barcelona.
     
     Llevamos desde el 2001 creciendo con vosotros, descubriendo todos los secretos que esconde nuestra querida planta y compartiéndolos como mejor sabemos.
     
@@ -16,4 +15,6 @@
     
     Somos La Huerta Grow Shop original, con la que incontables cannabicultores llevan más de 20 años cultivando. Tenemos una única sede, no tenemos franquicias, ¡Huye de imitaciones!
     
-    La Huerta Grow Shop Barcelona</h3>
+    Karazhan grow shop Argentina</h3>
+
+    {% endblock %}
