--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -48,7 +48,7 @@
             <div class="container position-relative">
                 <div class="row justify-content-center">
                     <div class="col-xl-6">
-                        <div class="text-center text-green">
+                        <div class="text-center text-white">
                             <!-- Page heading-->
                             <h1 class="mb-9">Karazhan<br> Growshop</h1> 
                             
@@ -91,9 +91,9 @@
                             <li class="list-inline-item">⋅</li>
                             <li class="list-inline-item"><a href="{% url 'home:contacto' %}">Contact</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Terms of Use</a></li>
+                            <li class="list-inline-item"><a href="{% url 'home:terms' %}">Terms of Use</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Privacy Policy</a></li>
+                          
                         </ul>
                         <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2022. All Rights Reserved.</p>
                     </div>
